# cookiecutter-mlops

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  README.md
{{ cookiecutter.repo_name }}/: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/.infra/: .gitignore
{{ cookiecutter.repo_name }}/src/: __init__.py  logging.py  utils.py
{{ cookiecutter.repo_name }}/src/__logs__/: logging.py
{{ cookiecutter.repo_name }}/src/__tests__/unit/: test_.py
{{ cookiecutter.repo_name }}/src/mytoolbox/: useful_functions.py
{{ cookiecutter.repo_name }}/src/pipeline/: __init__.py  main_pipeline.py  pipeline.py
{{ cookiecutter.repo_name }}/src/pipeline/sanitizers/: sanitizer_example.py
{{ cookiecutter.repo_name }}/src/pipeline/stages/interfaces/: pipeline_interface.py
