[project]
name = "project"
version = "1.0.0"
description = "description"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 79

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true

[tool.flake8]
max-complexity = 10
max-line-length = 79
exclude = ".venv"
extend-ignore = ["W503"]
per-file-ignores = "__init__.py: F401"

[tool.pylint]
max-line-length = 79
disable = ["C0330"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
filterwarnings = "error"
addopts = """
    -v -s
    --cov
    --cov-report html:reports/coverage
    --cov-report term-missing
    --cov-fail-under 80
    -W ignore::DeprecationWarning
"""

[tool.coverage.run]
source = ["src/tests"]