[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = ""
authors = ["Gabriel Cenciati <gbrcenciati@gmail.com>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
packages = [{include = "{{ cookiecutter.repo_name }}"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.1"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = ["C0114", "C0116", "R0903"]
extension-pkg-whitelist = "pydantic"

[tool.flake8]
max-line-length = 88
extend-ignore = ["W503"]
exclude = [".venv/"]
per-file-ignores = "__init__.py: F401"

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-s",
    "--strict-config",
    "--strict-markers",
    "--cov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=90",
]
filterwarnings = ["error"]
testpaths = ["tests"]
markers = [
    "unit: unit tests.",
    "integration: integration tests.",
    "e2e: end-to-end tests."
]

[tool.coverage.run]
parallel = true
source = ["tests"]

[tool.mypy]
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]